<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    tools:context=".ui.activity.RegisterActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textSize="24sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/bold"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Email Label -->
    <TextView
        android:id="@+id/tv_title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_email"
        android:textSize="14sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_register"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/ed_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="6dp"
        android:hint="@string/hint_email"
        android:fontFamily="@font/regular"
        android:inputType="text"
        android:textSize="12sp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Username Label -->
    <TextView
        android:id="@+id/tv_title_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_fullname"
        android:textSize="14sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/ed_register_fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="6dp"
        android:hint="@string/hint_fullname"
        android:fontFamily="@font/regular"
        android:inputType="text"
        android:textSize="12sp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_fullname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Password Label -->
    <TextView
        android:id="@+id/tv_title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_password"
        android:textSize="14sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/ed_register_fullname"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Password Input -->
    <com.example.sabi.ui.customview.CustomEditText
        android:id="@+id/ed_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="6dp"
        android:hint="@string/hint_password"
        android:fontFamily="@font/regular"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Confirm Password Label -->
    <TextView
        android:id="@+id/tv_title_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_confirm_password"
        android:textSize="14sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Confirm Password Input -->
    <EditText
        android:id="@+id/ed_register_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="6dp"
        android:hint="@string/hint_confirm_password"
        android:fontFamily="@font/regular"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Register Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:fontFamily="@font/bold"
        android:textSize="14sp"
        android:paddingVertical="12dp"
        android:layout_marginTop="20dp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/ed_register_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
