<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_gravity="center"
    android:background="@drawable/background_quiz_card">

    <!-- Header Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <!-- Close Button -->
        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close_description"/>
    </LinearLayout>

    <!-- Quiz Title -->
    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_quiz_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:fontFamily="@font/bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/darkgreen"/>

    <!-- Quiz Description -->
    <TextView
        android:id="@+id/tvQuizDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_quiz_confirm_description"
        android:fontFamily="@font/regular"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"/>

    <!-- Start Button -->
    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_quiz_confirm_action"
        android:fontFamily="@font/bold"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/darkgreen"
        android:textColor="@color/white"/>
</LinearLayout>
