<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    tools:context=".ui.activity.RegisterActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="30sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/bold"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Email Label -->
    <TextView
        android:id="@+id/tv_title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_email"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/ed_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="6dp"
        android:hint="@string/hint_email"
        android:fontFamily="@font/regular"
        android:inputType="text"
        android:textSize="14sp"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@id/tv_title_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Password Label -->
    <TextView
        android:id="@+id/tv_title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_password"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/ed_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="6dp"
        android:hint="@string/hint_password"
        android:fontFamily="@font/regular"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:fontFamily="@font/bold"
        android:textSize="14sp"
        android:paddingVertical="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
