<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_quiz"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:paddingStart="16dp"
        android:background="@drawable/background_quiz_card">

        <!-- Circle with Number -->
        <TextView
            android:id="@+id/tv_quiz_number"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/background_quiz_circle"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/quiz_number"/>

        <!-- Main Title -->
        <TextView
            android:id="@+id/tv_quiz_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="16dp"
            android:fontFamily="@font/bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_total_quiz"
            app:layout_constraintEnd_toStartOf="@id/iv_quiz_photo"
            app:layout_constraintStart_toEndOf="@id/tv_quiz_number"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_quiz_card"/>

        <!-- Subtitle -->
        <TextView
            android:id="@+id/tv_total_quiz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/regular"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/iv_quiz_photo"
            app:layout_constraintStart_toEndOf="@id/tv_quiz_number"
            app:layout_constraintTop_toBottomOf="@id/tv_quiz_title"
            tools:text="@string/quiz_total"/>

        <!-- Decorative Image -->
        <ImageView
            android:id="@+id/iv_quiz_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/quiz_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            tools:src="@drawable/image_placeholder"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
