<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    tools:context=".ui.activity.quiz.QuizQuestionActivity">

    <!-- Nomor Soal -->
    <TextView
        android:id="@+id/tv_question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bold"
        android:text="@string/title_quiz_question"
        android:textColor="@color/darkgreen"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Gambar Soal  -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_question_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Question Image"
        app:layout_constraintTop_toBottomOf="@id/tv_question_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:shapeAppearanceOverlay="@style/RoundedCornerImage"
        tools:src="@drawable/image_placeholder" />

    <!-- Pilihan Jawaban -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/answer_options_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_question_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Pilihan 1 -->
        <Button
            android:id="@+id/btn_option_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/medium_gray"
            android:elevation="10dp"
            android:fontFamily="@font/medium"
            android:paddingVertical="12dp"
            android:textColor="@color/darkgreen"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_option_2"
            tools:text="@string/option_1"/>

        <!-- Pilihan 2 -->
        <Button
            android:id="@+id/btn_option_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/medium_gray"
            android:elevation="10dp"
            android:fontFamily="@font/medium"
            android:paddingVertical="12dp"
            android:textColor="@color/darkgreen"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_option_1"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/option_2"/>

        <!-- Pilihan 3 -->
        <Button
            android:id="@+id/btn_option_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/medium_gray"
            android:elevation="10dp"
            android:fontFamily="@font/medium"
            android:paddingVertical="12dp"
            android:textColor="@color/darkgreen"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/btn_option_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_option_4"
            tools:text="@string/option_3"/>

        <!-- Pilihan 4 -->
        <Button
            android:id="@+id/btn_option_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/medium_gray"
            android:elevation="10dp"
            android:fontFamily="@font/medium"
            android:paddingVertical="12dp"
            android:textColor="@color/darkgreen"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/btn_option_2"
            app:layout_constraintStart_toEndOf="@id/btn_option_3"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/option_4"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Tombol Periksa -->
    <!-- Tombol Previous dan Next -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/answer_options_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Tombol Previous -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/bold"
            android:paddingVertical="12dp"
            android:text="@string/previous_button"
            android:textSize="14sp"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_next" />

        <!-- Tombol Next -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/bold"
            android:paddingVertical="12dp"
            android:text="@string/next_button"
            android:textSize="14sp"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_previous"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
